--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
             width: 800px;
             margin: 60px auto;
             height: 1180px;
-            padding: 20px auto;
+            padding: 2 a 0px auto;
             box-shadow: 0 2px 20px rgba(0, 0, 0, 3);
         }
         .header{
