--- a/project1.html
+++ b/project1.html
@@ -30,6 +30,7 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
         }
     .box1 h3 {
         padding: 4px;
@@ -49,6 +50,8 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
+
         }
     .box2 h3 {
         padding: 4px;
@@ -67,6 +70,8 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
+
         }
     .box3 h3 {
         padding: 4px;
@@ -86,6 +91,8 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
+
         }
     .box4 h3 {
         padding: 4px;
@@ -105,6 +112,8 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
+
         }
     .box5 h3 {
         padding: 4px;
@@ -124,6 +133,8 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
+
         }
     .box6 h3 {
         padding: 4px;
@@ -143,6 +154,8 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
+
         }
     .box7 h3 {
         padding: 4px;
@@ -161,6 +174,8 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
+
         }
     .box8 h3 {
         padding: 4px;
@@ -179,6 +194,8 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
+
         }
     .box9 h3 {
         padding: 4px;
@@ -197,6 +214,8 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
+
         }
     .box10 h3 {
         padding: 4px;
@@ -215,6 +234,8 @@
             background-color: rgb(255, 239, 254);
             margin: 25px;
             padding: 7px;
+            border-radius: 15px;
+
         }
     .box11 h3 {
         padding: 4px;
@@ -230,7 +251,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+   <div class="container">
     <div class="colum1">
         <div class="box1">
             <img src="123 (1).jpeg" width="250px" height="230px" alt="">
@@ -262,7 +283,7 @@
         </div><br>
         </div>
         <div class="colum2">
-        <div class="box5">
+        <div cla ss="box5">
            <img src="123 (4).jfif" alt="" width="250px" height="230px">
            <h3>Lorem ipsum dolor sit Lorem, ipsum dolor Lorem, ipsum.</h3>
             <h3>Rs:3000</h3>
