--- a/Second project/index.html
+++ b/Second project/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../web-dev-course/Second project/css/index.css">
+    <!-- <link rel="stylesheet" href="../../web-dev-course/Second project/css/index.css"> -->
+     <link rel="stylesheet" href="./css/indexs.css">
     <title>Document</title>
 </head>
 <body>
@@ -45,10 +46,12 @@
         <div class="contact"><img src="../Second project/img/about.jpg" alt=""></div>
         <div class="contact1"><h2>About us</h2><h1>Innovative Way To Learn</h1><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam corrupti obcaecati eius veniam, labore doloremque fuga eaque placeat, ex porro debitis, voluptatibus praesentium enim aspernatur laudantium vero. Quam mollitia dolores, a quia nam aut expedita? Iste quo eius modi fugiat sapiente, illo similique, accusamus quasi amet quia tenetur id odit possimus asperiores repudiandae consequuntur sequi est. Quidem obcaecati necessitatibus tempora modi excepturi suscipit tenetur voluptas, omnis reiciendis accusantium quibusdam ut placeat voluptate nulla animi aliquid libero magnam quam corrupti debitis praesentium error. Odio ex adipisci nostrum ut iusto. Pariatur voluptates repellendus nobis amet sint! Facilis in quas architecto ut consectetur.<p><button><a href=""style="text-decoration: none; color: white;">learn More</a></button></div>
     </div>
-     
-    <div class="explore">
-        <h2 style="color: orangered; font-size: 30px;">Subject</h2>
+     <div class="expoHeading">
+         <h2 style="color: orangered; font-size: 30px;">Subject</h2>
         <h1 style="color: rgba(14, 1, 4, 0.692);">Explore Top Subject</h1>
+     </div>
+    <div class="explore">
+       
         <div class="explore1">
             <div class="expl1"><h2>Developer</h2><h3>100 courses</h3></div>
             <div class="expl2"><h2>App disgn</h2><h3>100 courses</h3></div>
@@ -78,11 +81,11 @@
         </div>
     </div>
     <!-- need any course -->
-    <div class="choose"> <div class="choose1"><h2 style="color: rgb(255, 153, 1); font-size: 29px;">Need any course</h2> <h1>30% off For New Students</h1><p style="color: white; font-size: 30px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque repellendus pariatur deleniti velit tenetur. Autem consequuntur voluptatibus assumenda molestiae nihil, veritatis ab cumque. Laboriosam, voluptatum. Quasi cum officiis quo nobis dolorem enim, dolore officia, autem consequuntur eius maiores numquam consequatur corporis recusandae aperiam veritatis ab est nam reiciendis facilis porro!</p></div>
-    <div class="choose2"><form action=""><h2 style="background-color: aliceblue; width: 100%; height: 10vh; text-align: center; font-size: 40px; margin-top: 5px;">Sign in now</h2><br>
+    <div class="choose"> <div class="choose1"><h2 style="color: rgb(255, 153, 1); font-size: 29px;">Need any course</h2> <h1>30% off For New Students</h1><p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque repellendus pariatur deleniti velit tenetur. Autem consequuntur voluptatibus assumenda molestiae nihil, veritatis ab cumque. Laboriosam, voluptatum. Quasi cum officiis quo nobis dolorem enim, dolore officia, autem consequuntur eius maiores numquam consequatur corporis recusandae aperiam veritatis ab est nam reiciendis facilis porro!</p></div>
+    <div class="choose2"><form action=""><h2 style="background-color: aliceblue; width: 100%; height: 10vh; text-align: center; font-size: 40px; margin-top: 5px;">Sign in now</h2>
         <input type="text" placeholder="Enter your name" required><br>
         <input type="Email" placeholder="Enter your email" required><br>
-        <select name="" id="" style="font-size: 20px; width: 250px;">
+        <select name="" id="" style="font-size: 20px; width: 430px;">
         <option>Java</option>
         <option>C++</option>
         <option>Css</option>
@@ -96,7 +99,7 @@
         <h2 style="color: orange;">Our Develaper</h2>
         <h2>Meet Our Develaper</h2>
         <div class="teacher1">
-            <div class="tech1"><img style="border-radius: 10px;" src="../Second project/img/team-1.jpg" width="100%" height="225vh" alt=""><h2 style="font-size: 40px;">Yaseen malik</h2> <h3>Web Develaper</h3></div>
+            <div class="tech1"><img  src="../Second project/img/team-1.jpg" width="100%" height="225vh" alt=""><h2 style="">Yaseen malik</h2> <h3>Web Develaper</h3></div>
             <div class="tech2"><img style="border-radius: 10px;" src="../Second project/img/team-2.jpg" width="100%" height="225vh" alt=""><h2 style="font-size: 40px;">Yaseen malik</h2> <h3>Web Develaper</h3></div>
             <div class="tech3"><img style="border-radius: 10px;" src="../Second project/img/team-3.jpg" width="100%" height="225vh" alt=""><h2 style="font-size: 40px;">Yaseen malik</h2> <h3>Web Develaper</h3></div>
             <div class="tech4"><img style="border-radius: 10px;" src="../Second project/img/team-4.jpg" width="100%" height="225vh" alt=""><h2 style="font-size: 40px;">Yaseen malik</h2> <h3>Web Develaper</h3></div>
