--- a/Second project/index.html
+++ b/Second project/index.html
@@ -39,12 +39,12 @@
         </div>
     </header>
     <div class="homescreen">
-        <div class="home1"><h2>Best online coures</h2><h1>Best Education From</h1><h1>Your Home</h1><button><a href="" style="text-decoration: none; color: white;">Learn More</a></button></div>
+        <div class="home1"><h2>Best online coures</h2><h1>Best Education From</h1><h1>Your Home</h1><button><a href="" >Learn More</a></button></div>
     </div>
 
     <div class="aboutus">
         <div class="contact"><img src="../Second project/img/about.jpg" alt=""></div>
-        <div class="contact1"><h2>About us</h2><h1>Innovative Way To Learn</h1><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam corrupti obcaecati eius veniam, labore doloremque fuga eaque placeat, ex porro debitis, voluptatibus praesentium enim aspernatur laudantium vero. Quam mollitia dolores, a quia nam aut expedita? Iste quo eius modi fugiat sapiente, illo similique, accusamus quasi amet quia tenetur id odit possimus asperiores repudiandae consequuntur sequi est. Quidem obcaecati necessitatibus tempora modi excepturi suscipit tenetur voluptas, omnis reiciendis accusantium quibusdam ut placeat voluptate nulla animi aliquid libero magnam quam corrupti debitis praesentium error. Odio ex adipisci nostrum ut iusto. Pariatur voluptates repellendus nobis amet sint! Facilis in quas architecto ut consectetur.<p><button><a href=""style="text-decoration: none; color: white;">learn More</a></button></div>
+        <div class="contact1"><h2>About us</h2><h1>Innovative Way To Learn</h1><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam corrupti obcaecati eius veniam, labore doloremque fuga eaque placeat, ex porro debitis, voluptatibus praesentium enim aspernatur laudantium vero. Quam mollitia dolores, a quia nam aut expedita? Iste quo eius modi fugiat sapiente, illo similique, accusamus quasi amet quia tenetur id odit possimus asperiores repudiandae consequuntur sequi est. Quidem obcaecati necessitatibus tempora modi excepturi suscipit tenetur voluptas, omnis reiciendis accusantium quibusdam ut placeat voluptate nulla animi aliquid libero magnam quam corrupti debitis praesentium error. Odio ex adipisci nostrum ut iusto. Pariatur voluptates repellendus nobis amet sint! Facilis in quas architecto ut consectetur.<p><button><a href="">learn More</a></button></div>
     </div>
      <div class="expoHeading">
          <h2 style="color: orangered; font-size: 30px;">Subject</h2>
@@ -66,26 +66,29 @@
         </div>
     </div>
 <!-- our popular course -->
-    <div class="popularcourse">
-        <h2 style="color: orangered; font-size: 30px; text-align: center;">Subject</h2>
+ <div class="populrheading">
+      <h2 style="color: orangered; font-size: 30px; text-align: center;">Subject</h2>
         <h1 style="color: black;text-align: center;">Our Popular Course</h1>
+ </div>
+    <div class="popularcourse">
+      
         <div class="courses">
-             <div class="course1"><img style="border-radius: 20px;" src="../Second project/img/course-1.jpg" alt="" width="100%" height="370px"><div class="one">24 Student <div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment <br>  course</h2></div><hr><div class="one">4.3 <div class="two">$99</div></div></div>
-             <div class="course2"><img  style="border-radius: 20px;" src="../Second project/img/course-2.jpg" alt=""  width="100%" height="370px"><div class="one">24 Student<div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment<br>  course</h2></div><hr><div class="one">4.3 <div class="two">$99</div></div></div>
-             <div class="course3"><img  style="border-radius: 20px;" src="../Second project/img/course-3.jpg" alt="" width="100%" height="370px"><div class="one">24 Student<div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment<br>  course</h2></div><hr><div class="one">4.3 <div class="two">$99</div></div></div>
+             <div class="course1"><img style="border-radius: 20px;" src="../Second project/img/course-1.jpg" alt="" width="100%" height="350px"><div class="one">24 Student <pre>          </pre><div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment <br>  course</h2></div><hr><div class="one">4.3 <pre>                </pre> <div class="two">$99</div></div></div>
+             <div class="course2"><img  style="border-radius: 20px;" src="../Second project/img/course-2.jpg" alt=""  width="100%" height="350px"><div class="one">24 Student <pre>        </pre><div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment<br>  course</h2></div><hr><div class="one">4.3 <pre>                 </pre> <div class="two">$99</div></div></div>
+             <div class="course3"><img  style="border-radius: 20px;" src="../Second project/img/course-3.jpg" alt="" width="100%" height="350px"><div class="one">24 Student <pre>         </pre><div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment<br>  course</h2></div><hr><div class="one">4.3 <pre>                 </pre> <div class="two">$99</div></div></div>
         </div>
         <div class="courses1">
-             <div class="course4"><img  style="border-radius: 20px;" src="../Second project/img/course-4.jpg" alt="" width="100%" height="370px"><div class="one">24 Student <div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment<br>  course</h2></div><hr><div class="one">4.3 <div class="two">$99</div></div></div>
-             <div class="course5"><img  style="border-radius: 20px;" src="../Second project/img/course-5.jpg" alt=""  width="100%" height="370px"><div class="one">24 Student<div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment<br>  course</h2></div><hr><div class="one">4.3 <div class="two">$99</div></div></div>
-             <div class="course6"><img  style="border-radius: 20px;" src="../Second project/img/course-6.jpg" alt="" width="100%" height="370px"><div class="one">24 Student<div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment<br>  course</h2></div><hr><div class="one">4.3 <div class="two">$99</div></div></div>
+             <div class="course4"><img  style="border-radius: 20px;" src="../Second project/img/course-4.jpg" alt="" width="100%" height="350px"><div class="one">24 Student <pre>         </pre> <div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment<br>  course</h2></div><hr><div class="one">4.3 <pre>                </pre> <div class="two">$99</div></div></div>
+             <div class="course5"><img  style="border-radius: 20px;" src="../Second project/img/course-5.jpg" alt=""  width="100%" height="350px"><div class="one">24 Student <pre>        </pre><div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment<br>  course</h2></div><hr><div class="one">4.3 <pre>                 </pre> <div class="two">$99</div></div></div>
+             <div class="course6"><img  style="border-radius: 20px;" src="../Second project/img/course-6.jpg" alt="" width="100%" height="350px"><div class="one">24 Student <pre>         </pre><div class="two">1h50min</div></div><div class="headingpopul"><h2>web-develapment<br>  course</h2></div><hr><div class="one">4.3  <pre>                </pre><div class="two">$99</div></div></div>
         </div>
     </div>
     <!-- need any course -->
     <div class="choose"> <div class="choose1"><h2 style="color: rgb(255, 153, 1); font-size: 29px;">Need any course</h2> <h1>30% off For New Students</h1><p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque repellendus pariatur deleniti velit tenetur. Autem consequuntur voluptatibus assumenda molestiae nihil, veritatis ab cumque. Laboriosam, voluptatum. Quasi cum officiis quo nobis dolorem enim, dolore officia, autem consequuntur eius maiores numquam consequatur corporis recusandae aperiam veritatis ab est nam reiciendis facilis porro!</p></div>
-    <div class="choose2"><form action=""><h2 style="background-color: aliceblue; width: 100%; height: 10vh; text-align: center; font-size: 40px; margin-top: 5px;">Sign in now</h2>
+    <div class="choose2"><form action=""><h2 >Sign in now</h2>
         <input type="text" placeholder="Enter your name" required><br>
         <input type="Email" placeholder="Enter your email" required><br>
-        <select name="" id="" style="font-size: 20px; width: 430px;">
+        <select>
         <option>Java</option>
         <option>C++</option>
         <option>Css</option>
