--- a/Second project/index.html
+++ b/Second project/index.html
@@ -5,26 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../../web-dev-course/Second project/css/index.css"> -->
      <link rel="stylesheet" href="./css/indexs.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
     <header class="head">
-        <div class="ecourses">
+        <!-- <div class="ecourses">
              <div class="ecourse"><h1>ECOURSES</h1></div>
             <div class="ecourse"><p><b>Our Office</b><br>Next planer acandmy(skd)</p></div>
             <div class="ecourse"><p><b>Email</b><br>Yaseenmalik@gmail.com</p></div>
             <div class="ecourse"><p><b>Cell us</b><br>03554718956</p></div>
-        </div>
+        </div> -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" style="font-size: 35px;width: 20%;margin-left: 10vh;"><span style="color: orange;">E</span>COURSES</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
+      <div class="navbar-nav" >
+        <a class="nav-link active" aria-current="page"  ><p><b>Our Office</b><br>Next planer acandmy(skd)</p></a>
+        <a class="nav-link active" aria-current="page"  ><p><b>Email</b><br>Yaseenmalik@gmail.com</p></a>
+        <a class="nav-link active" aria-current="page"  ><p><b>Cell us</b><br>03554718956</p></a>
+   
+      </div>
+    </div>
+  </div>
+</nav>
+
+        <!-- boostrap -->
+        
         <hr>
-        <div class="navegaction">
-            <div class="subject"><h1><a href="">Subject</a></h1></div>
+        <div class="navegaction" style="justify-content: space-around ; ">
+            <!-- <div class="subject"><h1><a href="">Subject</a></h1></div> -->
             <div class="navbar">
-            <div class="nav"><a href="">Home</a></div>
-            <div class="nav"><a href="">About</a></div>
-            <div class="nav"><a href="">Course</a></div>
-            <div class="nav"><a href="">Developers</a></div>
-            <div class="nav"><a href="">Blogs</a></div>
-            <div class="nav">Contact</div>
+                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid" style="background-color: rgb(255, 255, 255);">
+        <a class="nav-link disabled" style="width: 25%;height: 10vh;color: white; text-align: center; margin-right: 10vh; font-size: 25px; background-color: orange;" aria-disabled="true">Subject</a>
+
+    <!-- <a class="navbar-brand" style="" href="#">Subject</a> -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link "href="index.htmls">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="course.html">Course</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="develaper.html" >Develaper</a>
+
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blogs</a>
+
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+            <!-- <div class="nav"><a href="">Home</a></div>
+            <div class="nav"><a href="./about.html">About</a></div>
+            <div class="nav"><a href="./course.html">Course</a></div>
+            <div class="nav"><a href="develaper.html">Developers</a></div>
+            <div class="nav"><a href="blog">Blogs</a></div>
+            <div class="nav"><a href="contact.html">Contact</a></div> -->
         </div>
             <div class="joint"><button>Joint Us</button></div>
             <div id="dark">
@@ -67,7 +123,7 @@
     </div>
 <!-- our popular course -->
  <div class="populrheading">
-      <h2 style="color: orangered; font-size: 30px; text-align: center;">Subject</h2>
+      <h2 style="color: orangered; font-size: 40px !important; text-align: center;">Subject</h2>
         <h1 style="color: black;text-align: center;">Our Popular Course</h1>
  </div>
     <div class="popularcourse">
@@ -99,19 +155,19 @@
     </div>
     <!-- our develapers -->
      <div class="teachers">
-        <h2 style="color: orange;">Our Develaper</h2>
-        <h2>Meet Our Develaper</h2>
+        <h2 style="color: orange; font-size: 40px;">Our Develaper</h2>
+        <h2 style="color: black; font-size: 30px;">Meet Our Develaper</h2>
         <div class="teacher1">
-            <div class="tech1"><img  src="../Second project/img/team-1.jpg" width="100%" height="225vh" alt=""><h2 style="">Yaseen malik</h2> <h3>Web Develaper</h3></div>
-            <div class="tech2"><img style="border-radius: 10px;" src="../Second project/img/team-2.jpg" width="100%" height="225vh" alt=""><h2 style="font-size: 40px;">Yaseen malik</h2> <h3>Web Develaper</h3></div>
-            <div class="tech3"><img style="border-radius: 10px;" src="../Second project/img/team-3.jpg" width="100%" height="225vh" alt=""><h2 style="font-size: 40px;">Yaseen malik</h2> <h3>Web Develaper</h3></div>
-            <div class="tech4"><img style="border-radius: 10px;" src="../Second project/img/team-4.jpg" width="100%" height="225vh" alt=""><h2 style="font-size: 40px;">Yaseen malik</h2> <h3>Web Develaper</h3></div>
+            <div class="tech1"><img  src="../Second project/img/team-1.jpg" width="100%" height="225vh" alt=""><h2 >Akash ali</h2> <h3>Web Develaper</h3></div>
+            <div class="tech2"><img  src="../Second project/img/team-2.jpg" width="100%" height="225vh" alt=""><h2 >Inam</h2> <h3>Web Develaper</h3></div>
+            <div class="tech3"><img  src="../Second project/img/team-3.jpg" width="100%" height="225vh" alt=""><h2 >Tajwar</h2> <h3>Web Develaper</h3></div>
+            <div class="tech4"><img  src="../Second project/img/team-4.jpg" width="100%" height="225vh" alt=""><h2 >Yaseen </h2> <h3>Web Develaper</h3></div>
         </div>
      </div>
      <!-- our Blogs -->
       <div class="blogs">
-        <h2>Our Blogs</h2>
-        <h2>Latest From Our Blogs</h2>
+        <h2 style="color: orangered;font-size: 40px;">Our Blogs</h2>
+        <h2 style="font-size: 30px;" >Latest From Our Blogs</h2>
         <div class="blog">
             <div class="blog1"><h2>Book self</h2></div>
             <div class="blog2"><h2>Confused</h2></div>
@@ -120,6 +176,7 @@
       </div>
       <!-- footer area -->
        <div class="footer">
+        <div class="footer1">
         <div class="footerfirst">
             <h2 style="color: tomato; font-size: 30px;">GET IN TOUCH</h2>
             <p>123 street,new york,uk</p>
@@ -133,7 +190,7 @@
             <p>App dign</p>
             <p>Marketing</p>
             <p>SCO</p>
-        </div><div class="footersecond">
+        </div></div><div class="footersecond">
             <h2  style="color: tomato; font-size: 30px;">NEWSLATTER</h2>
             <p>Lorem ipsums veritatis eum repudiand Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia aperiam voluptatibus ad.aliquid eos vel. Nostrum modi eaque incidunt nisi!</p>
             <form action=""><input type="email" placeholder="Enter your email" required id="ft"><input type="submit" id="ft1"></form>
