--- a/Second project/index.html
+++ b/Second project/index.html
@@ -5,95 +5,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../../web-dev-course/Second project/css/index.css"> -->
      <link rel="stylesheet" href="./css/indexs.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    <header class="head">
-        <!-- <div class="ecourses">
-             <div class="ecourse"><h1>ECOURSES</h1></div>
-            <div class="ecourse"><p><b>Our Office</b><br>Next planer acandmy(skd)</p></div>
-            <div class="ecourse"><p><b>Email</b><br>Yaseenmalik@gmail.com</p></div>
-            <div class="ecourse"><p><b>Cell us</b><br>03554718956</p></div>
-        </div> -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" style="font-size: 35px;width: 20%;margin-left: 10vh;"><span style="color: orange;">E</span>COURSES</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
-      <div class="navbar-nav" >
-        <a class="nav-link active" aria-current="page"  ><p><b>Our Office</b><br>Next planer acandmy(skd)</p></a>
-        <a class="nav-link active" aria-current="page"  ><p><b>Email</b><br>Yaseenmalik@gmail.com</p></a>
-        <a class="nav-link active" aria-current="page"  ><p><b>Cell us</b><br>03554718956</p></a>
-   
+     <div class="head">
+  <!-- ================= TOP INFO BAR ================= -->
+<div class="top-bar bg-dark text-light py-2 d-none d-lg-block">
+  <div class="container">
+    <div class="row align-items-center">
+
+      <div class="col-lg-4">
+        <strong id="ecourse">ECOURSES</strong><br>
+        Next Planer Academy (SKD), Gilgit Baltistan
       </div>
+
+      <div class="col-lg-4 ">
+        <i class="bi bi-envelope text-primary"></i>
+        <strong id="ecourse">Email</strong><br>
+        muhammadalianjumbalghari@gmail.com
+      </div>
+      
+
+      <div class="col-lg-4 text-start">
+        <i class="bi bi-telephone text-primary"></i>
+        <strong id="ecourse">Cell</strong><br>
+        0355-5165163
+      </div>
+
     </div>
   </div>
-</nav>
+</div>
 
-        <!-- boostrap -->
-        
-        <hr>
-        <div class="navegaction" style="justify-content: space-around ; ">
-            <!-- <div class="subject"><h1><a href="">Subject</a></h1></div> -->
-            <div class="navbar">
-                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid" style="background-color: rgb(255, 255, 255);">
-        <a class="nav-link disabled" style="width: 25%;height: 10vh;color: white; text-align: center; margin-right: 10vh; font-size: 25px; background-color: orange;" aria-disabled="true">Subject</a>
+<!-- ================= MAIN NAVBAR ================= -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
+  <div class="container">
 
-    <!-- <a class="navbar-brand" style="" href="#">Subject</a> -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand text-primary" href="#">Subjects</a>
+
+    <!-- Mobile Toggle -->
+    <button class="navbar-toggler d-lg-none" type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#mobileMenu">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link "href="index.htmls">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="course.html">Course</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="develaper.html" >Develaper</a>
 
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Blogs</a>
+    <!-- Desktop Menu -->
+    <div class="collapse navbar-collapse d-none d-lg-flex">
+      <ul class="navbar-nav ms-auto align-items-center">
 
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="course.html">Courses</a></li>
+        <li class="nav-item"><a class="nav-link" href="develaper.html">Developers</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 
+        <li class="nav-item ms-3">
+          <a class="btn btn-primary rounded-pill px-4" href="#">Join Us</a>
         </li>
+
       </ul>
     </div>
+
   </div>
 </nav>
-            <!-- <div class="nav"><a href="">Home</a></div>
-            <div class="nav"><a href="./about.html">About</a></div>
-            <div class="nav"><a href="./course.html">Course</a></div>
-            <div class="nav"><a href="develaper.html">Developers</a></div>
-            <div class="nav"><a href="blog">Blogs</a></div>
-            <div class="nav"><a href="contact.html">Contact</a></div> -->
-        </div>
-            <div class="joint"><button>Joint Us</button></div>
-            <div id="dark">
-          <!-- <label for="darkChek"> <img src="./img/like-heart-round-line-icon.png" alt="" ></label>
-         <input type="checkbox" id="darkChek" onclick="dark()"> -->
-         <select name="" id="drack1" onchange="dark(this)">
-          <option value="0">Dark</option>
-        <option value="1" id="darkChek" >light mode</option>
-        <option value="2" id="darkChek">Dark mode</option>
-      </select>
-        </div>
-        </div>
-    </header>
+
+<!-- ================= MOBILE OFFCANVAS MENU ================= -->
+<div class="offcanvas offcanvas-start" tabindex="-1" id="mobileMenu">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title text-primary">Subjects</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+  </div>
+
+  <div class="offcanvas-body">
+    <ul class="navbar-nav">
+
+      <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Developers</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+
+      <li class="mt-3">
+        <a class="btn btn-primary w-100 rounded-pill" href="#">Join Us</a>
+      </li>
+
+    </ul>
+  </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</div>
     <div class="homescreen">
         <div class="home1"><h2>Best online coures</h2><h1>Best Education From</h1><h1>Your Home</h1><button><a href="" >Learn More</a></button></div>
     </div>
@@ -158,7 +164,7 @@
         <h2 style="color: orange; font-size: 40px;">Our Develaper</h2>
         <h2 style="color: black; font-size: 30px;">Meet Our Develaper</h2>
         <div class="teacher1">
-            <div class="tech1"><img  src="../Second project/img/team-1.jpg" width="100%" height="225vh" alt=""><h2 >Akash ali</h2> <h3>Web Develaper</h3></div>
+            <div class="tech1"><img  src="../Second project/img/ak pic.jpeg " width="100%" height="225vh" alt=""><h2 >Akash ali</h2> <h3>Web Develaper</h3></div>
             <div class="tech2"><img  src="../Second project/img/team-2.jpg" width="100%" height="225vh" alt=""><h2 >Inam</h2> <h3>Web Develaper</h3></div>
             <div class="tech3"><img  src="../Second project/img/team-3.jpg" width="100%" height="225vh" alt=""><h2 >Tajwar</h2> <h3>Web Develaper</h3></div>
             <div class="tech4"><img  src="../Second project/img/team-4.jpg" width="100%" height="225vh" alt=""><h2 >Yaseen </h2> <h3>Web Develaper</h3></div>
