--- a/Second project/index.html
+++ b/Second project/index.html
@@ -82,12 +82,12 @@
   <div class="offcanvas-body">
     <ul class="navbar-nav">
 
-      <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Developers</a></li>
+      <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+      <li class="nav-item"><a class="nav-link" href="course.html">Courses</a></li>
+      <li class="nav-item"><a class="nav-link" href="develaper.html">Developers</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+      <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 
       <li class="mt-3">
         <a class="btn btn-primary w-100 rounded-pill" href="#">Join Us</a>
